--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://precious-clafoutis-be25af.netlify.app/"
+baseURL = "https://austin-hart.netlify.app/"
 theme = "hugo-apero"
 languageCode = "en"
 title = "Austin Hart"
